work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -24,9 +24,7 @@
       <img id="a" class="foto" src="test.jpg" />
       <img id="b" class="foto" src="test3.jpg" />
       <img id="c" class="foto" src="test5.jpg" />
-      <img id="d" class="foto" src="1.jpg" />
-      <img id="e" class="foto" src="2.jpg" />
-      <img id="f" class="foto" src="3.jpg" />
+      <img id="d" class="foto" src="test4.jpg" />
 
 
 </div>
