--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -15,20 +15,20 @@
 
 <body>
   <div class="home">
-    <div class="name">Valerio Tirapani</div>
-    <div class="navbarhome">
-      <div class="galleria">galleria</div>
-      <div class="chisono">chi sono</div>
-      <div class="contatti">contatti</div>
-    </div>
-    <div class="mainhome">
+    <div class="main">
       <div class="frame">
         <img id="preview" class="foto" src="images/test.jpg" />
         <img id="preview" class="foto" src="images/test3.jpg" />
         <img id="preview" class="foto" src="images/test5.jpg" />
         <img id="preview" class="foto" src="images/test4.jpg" />
       </div>
+    <div class="navbarhome">
+      <div class="name">Valerio Tirapani</div>
+      <div class="galleria">galleria</div>
+      <div class="chisono">chi sono</div>
+      <div class="contatti">contatti</div>
     </div>
+  </div>
   </div>
       <div class="navbar" style="display: none">
         <div>
@@ -75,7 +75,7 @@
     </div>
     <div class="contacts" style="display: none">
           <p>+39 334 2792 206</p>
-          <p>info@valeriotirapani.it</p>
+          <a href="info@valeriotirapani.it">info@valeriotirapani.it</a>
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
