--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -14,27 +14,29 @@
 </head>
 
 <body>
-  <div class="home">
-    <div class="main">
-      <div class="frame">
-        <img id="preview" class="foto" src="images/test.jpg" />
-        <img id="preview" class="foto" src="images/test3.jpg" />
-        <img id="preview" class="foto" src="images/test5.jpg" />
-        <img id="preview" class="foto" src="images/test4.jpg" />
+
+    <div class="content" style="display: none">
+      <div class="home">
+        <div class="main">
+          <div class="frame">
+            <img id="preview" class="foto" src="images/test.jpg" />
+            <img id="preview" class="foto" src="images/test3.jpg" />
+            <img id="preview" class="foto" src="images/test5.jpg" />
+            <img id="preview" class="foto" src="images/test4.jpg" />
+          </div>
+          <div class="navbarhome">
+            <div class="name">Valerio Tirapani</div>
+            <div class="galleria">galleria</div>
+            <div class="chisono">chi sono</div>
+            <div class="contatti">contatti</div>
+          </div>
+        </div>
       </div>
-    <div class="navbarhome">
-      <div class="name">Valerio Tirapani</div>
-      <div class="galleria">galleria</div>
-      <div class="chisono">chi sono</div>
-      <div class="contatti">contatti</div>
-    </div>
-  </div>
-  </div>
       <div class="navbar" style="display: none">
         <div>
           <div class="namenavbar">Valerio Tirapani</div>
         </div>
-        <div class="bar" >
+        <div class="bar">
           <div class="gallerianavbar">galleria</div>
           <div class="chisononavbar">chi sono</div>
           <div class="contattinavbar">contatti</div>
@@ -42,41 +44,42 @@
       </div>
       <div class="gallery" style="display: none">
         <div class="column">
-            <img id="fotogallery" src="images/test.jpg" />
-            <img id="fotogallery" src="images/1.jpg" />
-            <img id="fotogallery" src="images/test3.jpg" />
-            <img id="fotogallery" src="images/test5.jpg" />
-            <img id="fotogallery" src="images/2.jpg" />
-            <img id="fotogallery" src="images/test4.jpg" />
-            <img id="fotogallery" src="images/3.jpg" />
-          </div>
-          <div class="column">
-            <img id="fotogallery" src="images/1.jpg" />
-            <img id="fotogallery" src="images/test5.jpg" />
-            <img id="fotogallery" src="images/2.jpg" />
-            <img id="fotogallery" src="images/test3.jpg" />
-            <img id="fotogallery" src="images/test4.jpg" />
-            <img id="fotogallery" src="images/3.jpg" />
-            <img id="fotogallery" src="images/test.jpg" />
-          </div>
-            <div class="column">
-              <img id="fotogallery" src="images/3.jpg" />
-            <img id="fotogallery" src="images/test3.jpg" />
-            <img id="fotogallery" src="images/1.jpg" />
-            <img id="fotogallery" src="images/test5.jpg" />
-            <img id="fotogallery" src="images/test4.jpg" />
-            <img id="fotogallery" src="images/test.jpg" />
-            <img id="fotogallery" src="images/2.jpg" />
-          </div>
+          <img id="fotogallery" src="images/test.jpg" />
+          <img id="fotogallery" src="images/1.jpg" />
+          <img id="fotogallery" src="images/test3.jpg" />
+          <img id="fotogallery" src="images/test5.jpg" />
+          <img id="fotogallery" src="images/2.jpg" />
+          <img id="fotogallery" src="images/test4.jpg" />
+          <img id="fotogallery" src="images/3.jpg" />
+        </div>
+        <div class="column">
+          <img id="fotogallery" src="images/1.jpg" />
+          <img id="fotogallery" src="images/test5.jpg" />
+          <img id="fotogallery" src="images/2.jpg" />
+          <img id="fotogallery" src="images/test3.jpg" />
+          <img id="fotogallery" src="images/test4.jpg" />
+          <img id="fotogallery" src="images/3.jpg" />
+          <img id="fotogallery" src="images/test.jpg" />
+        </div>
+        <div class="column">
+          <img id="fotogallery" src="images/3.jpg" />
+          <img id="fotogallery" src="images/test3.jpg" />
+          <img id="fotogallery" src="images/1.jpg" />
+          <img id="fotogallery" src="images/test5.jpg" />
+          <img id="fotogallery" src="images/test4.jpg" />
+          <img id="fotogallery" src="images/test.jpg" />
+          <img id="fotogallery" src="images/2.jpg" />
+        </div>
       </div>
-    <div class="aboutme" style="display: none">
+      <div class="aboutme" style="display: none">
         <img class="profilo" src="profilo.jpg" />
         <div class="txt">Sono nato a Roma nell’aprile del ’90. Ho frequentato il Liceo Artistico Ripetta. Dipingo vivo e lavoro a Roma. Autodidatta.</div>
-    </div>
-    <div class="contacts" style="display: none">
-          <p>+39 334 2792 206</p>
-          <a href="info@valeriotirapani.it">info@valeriotirapani.it</a>
       </div>
+      <div class="contacts" style="display: none">
+        <p>+39 334 2792 206</p>
+        <a href="info@valeriotirapani.it">info@valeriotirapani.it</a>
+      </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="main.js"></script>
