work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="contacts" style="display: none">
         <p>+39 334 2792 206</p>
-        <a href="info@valeriotirapani.it">info@valeriotirapani.it</a>
+        <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
       </div>
     </div>
 
