work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 
 <body>
@@ -33,18 +34,14 @@
         </div>
       </div>
       <div class="navbar" style="display: none">
-        <div>
           <div class="namenavbar">Valerio Tirapani</div>
-        </div>
-        <div class="bar">
           <div class="gallerianavbar">galleria</div>
           <div class="chisononavbar">chi sono</div>
           <div class="contattinavbar">contatti</div>
-        </div>
       </div>
       <div class="gallery" style="display: none">
         <div class="column">
-          <img id="fotogallery" src="images/test.jpg" />
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/face_kLAEZuYAwcY3_.png"><img id="fotogallery" src="images/test.jpg" /></a>
           <img id="fotogallery" src="images/1.jpg" />
           <img id="fotogallery" src="images/test3.jpg" />
           <img id="fotogallery" src="images/test5.jpg" />
@@ -53,18 +50,18 @@
           <img id="fotogallery" src="images/3.jpg" />
         </div>
         <div class="column">
-          <img id="fotogallery" src="images/1.jpg" />
-          <img id="fotogallery" src="images/test5.jpg" />
-          <img id="fotogallery" src="images/2.jpg" />
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Boia/alien_vu0Bi9DXxNzmB.jpg"><img id="fotogallery" src="images/1.jpg" /></a>
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/test5.jpg" /></a>
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/man_CGDOa6zQRzo2e.png"><img id="fotogallery" src="images/2.jpg" /></a>
           <img id="fotogallery" src="images/test3.jpg" />
           <img id="fotogallery" src="images/test4.jpg" />
           <img id="fotogallery" src="images/3.jpg" />
           <img id="fotogallery" src="images/test.jpg" />
         </div>
         <div class="column">
-          <img id="fotogallery" src="images/3.jpg" />
-          <img id="fotogallery" src="images/test3.jpg" />
-          <img id="fotogallery" src="images/1.jpg" />
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/3.jpg" /></a>
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/1_2SgL2eKCHjLc.png"><img id="fotogallery" src="images/test3.jpg" /></a>
+          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/blue_wale_j-_SoDU-q3Gdc.png"><img id="fotogallery" src="images/1.jpg" /></a>
           <img id="fotogallery" src="images/test5.jpg" />
           <img id="fotogallery" src="images/test4.jpg" />
           <img id="fotogallery" src="images/test.jpg" />
@@ -81,7 +78,8 @@
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="main.js"></script>
 </body>
 
