--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-
+  <div class="loader">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
     <div class="content" style="display: none">
       <div class="home">
         <div class="main">
