work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -41,6 +41,7 @@
             <div class="contatti">contatti</div>
           </div>
         </div>
+        <div class="footer">&copy; Copyright 2021 | Valerio Tirapani</div>
       </div>
       <div class="navbar" style="display: none">
           <div class="namenavbar">Valerio Tirapani</div>
