work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -85,7 +85,7 @@
         <p>+39 334 2792 206</p>
         <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
       </div>
-      <div class="footer">&copy; Copyright 2021 | Valerio Tirapani</div>
+      <div class="footer">&copy; 2020 | Valerio Tirapani</div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
