work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -41,12 +41,15 @@
             <div class="contatti">contatti</div>
           </div>
         </div>
+        <p class="footer">&copy; 2020 | Valerio Tirapani</p>
       </div>
       <div class="navbar" style="display: none">
           <div class="namenavbar">Valerio Tirapani</div>
-          <div class="gallerianavbar">galleria</div>
-          <div class="chisononavbar">chi sono</div>
-          <div class="contattinavbar">contatti</div>
+            <div class="bar">
+              <div class="gallerianavbar">galleria</div>
+              <div class="chisononavbar">chi sono</div>
+              <div class="contattinavbar">contatti</div>
+          </div>
       </div>
       <div class="gallery" style="display: none">
         <div class="column">
@@ -85,7 +88,6 @@
         <p>+39 334 2792 206</p>
         <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
       </div>
-      <div class="footer">&copy; 2020 | Valerio Tirapani</div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
