--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -25,74 +25,71 @@
     <div></div>
     <div></div>
   </div>
-    <div class="content" style="display: none">
-      <div class="home">
-        <div class="main">
-          <div class="frame">
-            <img id="preview" class="foto" src="images/test.jpg" />
-            <img id="preview" class="foto" src="images/test3.jpg" />
-            <img id="preview" class="foto" src="images/test5.jpg" />
-            <img id="preview" class="foto" src="images/test4.jpg" />
-          </div>
-          <div class="navbarhome">
-            <div class="name">Valerio Tirapani</div>
-            <div class="galleria">galleria</div>
-            <div class="chisono">chi sono</div>
-            <div class="contatti">contatti</div>
-          </div>
-        </div>
-        <p class="footer">&copy; 2020 | Valerio Tirapani</p>
-      </div>
-      <div class="navbar" style="display: none">
-          <div class="namenavbar">Valerio Tirapani</div>
-            <div class="bar">
-              <div class="gallerianavbar">galleria</div>
-              <div class="chisononavbar">chi sono</div>
-              <div class="contattinavbar">contatti</div>
-          </div>
-      </div>
-      <div class="gallery" style="display: none">
-        <div class="column">
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/face_kLAEZuYAwcY3_.png"><img id="fotogallery" src="images/test.jpg" /></a>
-          <img id="fotogallery" src="images/1.jpg" />
-          <img id="fotogallery" src="images/test3.jpg" />
-          <img id="fotogallery" src="images/test5.jpg" />
-          <img id="fotogallery" src="images/2.jpg" />
-          <img id="fotogallery" src="images/test4.jpg" />
-          <img id="fotogallery" src="images/3.jpg" />
-        </div>
-        <div class="column">
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Boia/alien_vu0Bi9DXxNzmB.jpg"><img id="fotogallery" src="images/1.jpg" /></a>
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/test5.jpg" /></a>
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/man_CGDOa6zQRzo2e.png"><img id="fotogallery" src="images/2.jpg" /></a>
-          <img id="fotogallery" src="images/test3.jpg" />
-          <img id="fotogallery" src="images/test4.jpg" />
-          <img id="fotogallery" src="images/3.jpg" />
-          <img id="fotogallery" src="images/test.jpg" />
-        </div>
-        <div class="column">
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/3.jpg" /></a>
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/1_2SgL2eKCHjLc.png"><img id="fotogallery" src="images/test3.jpg" /></a>
-          <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/blue_wale_j-_SoDU-q3Gdc.png"><img id="fotogallery" src="images/1.jpg" /></a>
-          <img id="fotogallery" src="images/test5.jpg" />
-          <img id="fotogallery" src="images/test4.jpg" />
-          <img id="fotogallery" src="images/test.jpg" />
-          <img id="fotogallery" src="images/2.jpg" />
-        </div>
-      </div>
-      <div class="aboutme" style="display: none">
-        <img class="profilo" src="profilo.jpg" />
-        <div class="txt">Sono nato a Roma nell’aprile del ’90. Ho frequentato il Liceo Artistico Ripetta. Dipingo vivo e lavoro a Roma. Autodidatta.</div>
-      </div>
-      <div class="contacts" style="display: none">
-        <p>+39 334 2792 206</p>
-        <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
+  <div class="content" style="display: none">
+    <div class="dropdown" id="dropdown">
+      <div class="dropbtn" id="dropbtn">&#9660;</div>
+      <div id="links" class="links">
+        <p class="prima">HOME</p>
+        <p class="galleria">GALLERIA</p>
+        <p class="collab">PROGETTI</p>
+        <p class="chisono">CHI SONO</p>
+        <p class="contatti">CONTATTI</p>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="main.js"></script>
+    <div class="home">
+      <div class="main">
+        <div class="frame">
+          <img id="preview" class="foto" src="images/test.jpg" />
+          <img id="preview" class="foto" src="images/test3.jpg" />
+          <img id="preview" class="foto" src="images/test5.jpg" />
+          <img id="preview" class="foto" src="images/test4.jpg" />
+        </div>
+      </div>
+      <p class="footer">&copy; 2020 | Valerio Tirapani</p>
+    </div>
+    <div class="gallery" style="display: none">
+      <div class="column">
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/face_kLAEZuYAwcY3_.png"><img id="fotogallery" src="images/test.jpg" /></a>
+        <img id="fotogallery" src="images/1.jpg" />
+        <img id="fotogallery" src="images/test3.jpg" />
+        <img id="fotogallery" src="images/test5.jpg" />
+        <img id="fotogallery" src="images/2.jpg" />
+        <img id="fotogallery" src="images/test4.jpg" />
+        <img id="fotogallery" src="images/3.jpg" />
+      </div>
+      <div class="column">
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Boia/alien_vu0Bi9DXxNzmB.jpg"><img id="fotogallery" src="images/1.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/test5.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/man_CGDOa6zQRzo2e.png"><img id="fotogallery" src="images/2.jpg" /></a>
+        <img id="fotogallery" src="images/test3.jpg" />
+        <img id="fotogallery" src="images/test4.jpg" />
+        <img id="fotogallery" src="images/3.jpg" />
+        <img id="fotogallery" src="images/test.jpg" />
+      </div>
+      <div class="column">
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/3.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/1_2SgL2eKCHjLc.png"><img id="fotogallery" src="images/test3.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/blue_wale_j-_SoDU-q3Gdc.png"><img id="fotogallery" src="images/1.jpg" /></a>
+        <img id="fotogallery" src="images/test5.jpg" />
+        <img id="fotogallery" src="images/test4.jpg" />
+        <img id="fotogallery" src="images/test.jpg" />
+        <img id="fotogallery" src="images/2.jpg" />
+      </div>
+    </div>
+    <div class="aboutme" style="display: none">
+      <img class="profilo" src="profilo.jpg" />
+      <div class="txt">Sono nato a Roma nell’aprile del ’90. Ho frequentato il Liceo Artistico Ripetta. Dipingo vivo e lavoro a Roma. Autodidatta.</div>
+    </div>
+    <div class="contacts" style="display: none">
+      <p>+39 334 2792 206</p>
+      <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
