work in progress

--- a/Valerio/index.html
+++ b/Valerio/index.html
@@ -46,36 +46,25 @@
           <img id="preview" class="foto" src="images/test4.jpg" />
         </div>
       </div>
-      <p class="footer">&copy; 2020 | Valerio Tirapani</p>
     </div>
     <div class="gallery" style="display: none">
-      <div class="column">
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/face_kLAEZuYAwcY3_.png"><img id="fotogallery" src="images/test.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/face_kLAEZuYAwcY3_.png"><img id="fotogallery" src="images/test.jpg"></a>
         <img id="fotogallery" src="images/1.jpg" />
         <img id="fotogallery" src="images/test3.jpg" />
         <img id="fotogallery" src="images/test5.jpg" />
         <img id="fotogallery" src="images/2.jpg" />
         <img id="fotogallery" src="images/test4.jpg" />
         <img id="fotogallery" src="images/3.jpg" />
-      </div>
-      <div class="column">
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Boia/alien_vu0Bi9DXxNzmB.jpg"><img id="fotogallery" src="images/1.jpg" /></a>
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/test5.jpg" /></a>
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/man_CGDOa6zQRzo2e.png"><img id="fotogallery" src="images/2.jpg" /></a>
         <img id="fotogallery" src="images/test3.jpg" />
         <img id="fotogallery" src="images/test4.jpg" />
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/3.jpg" /></a>
         <img id="fotogallery" src="images/3.jpg" />
         <img id="fotogallery" src="images/test.jpg" />
-      </div>
-      <div class="column">
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/FLUFFY_RENDER__u3jX7AUr6XEa.jpg"><img id="fotogallery" src="images/3.jpg" /></a>
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/1_2SgL2eKCHjLc.png"><img id="fotogallery" src="images/test3.jpg" /></a>
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/InOktober/Artwork/blue_wale_j-_SoDU-q3Gdc.png"><img id="fotogallery" src="images/1.jpg" /></a>
-        <img id="fotogallery" src="images/test5.jpg" />
-        <img id="fotogallery" src="images/test4.jpg" />
-        <img id="fotogallery" src="images/test.jpg" />
-        <img id="fotogallery" src="images/2.jpg" />
-      </div>
     </div>
     <div class="aboutme" style="display: none">
       <img class="profilo" src="profilo.jpg" />
@@ -85,6 +74,7 @@
       <p>+39 334 2792 206</p>
       <a href="mailto:info@valeriotirapani.it">info@valeriotirapani.it</a>
     </div>
+    <p class="footer">&copy; 2020 | Valerio Tirapani</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
