work in progress

--- a/Valerio/projects.html
+++ b/Valerio/projects.html
@@ -66,19 +66,30 @@
       </section>
 
       <div class="gallery">
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/941378_157002867804060_1245535780_n_kkbhYE25AD.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/941378_157002867804060_1245535780_n_kkbhYE25AD.jpg"></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/941378_157002867804060_1245535780_n_kkbhYE25AD.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/941378_157002867804060_1245535780_n_kkbhYE25AD.jpg"></a>
         <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/229654_157002804470733_742760897_n_5kSSSgOjvr.jpg"><img id="fotogallery"
             src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/229654_157002804470733_742760897_n_5kSSSgOjvr.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/947250_157002787804068_1537808717_n_Ba63ml9wca.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/947250_157002787804068_1537808717_n_Ba63ml9wca.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/1451516_220281764809503_1053893980_n_e0N4OysdFK.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/1451516_220281764809503_1053893980_n_e0N4OysdFK.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/585_178628802308133_1884578181_n_u3jEEptNOk.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/585_178628802308133_1884578181_n_u3jEEptNOk.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/547780_220281738142839_1822295461_n_Q8_BNQxB3c.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/547780_220281738142839_1822295461_n_Q8_BNQxB3c.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/11923_157002817804065_813107362_n_0i8BgCZlj0XvP.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/11923_157002817804065_813107362_n_0i8BgCZlj0XvP.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/422126_157035681134112_720350114_n_DPh6akelFoF-d.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/422126_157035681134112_720350114_n_DPh6akelFoF-d.jpg"></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/600648_220281758142837_832956865_n_B8eJqj_NXXvyI.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/600648_220281758142837_832956865_n_B8eJqj_NXXvyI.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/262423_157032747801072_1200298559_n-1_JbGvZ5ygtXkhe.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/262423_157032747801072_1200298559_n-1_JbGvZ5ygtXkhe.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/316037_157035667800780_1212250794_n_28KXJhdS2pb6.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/316037_157035667800780_1212250794_n_28KXJhdS2pb6.jpg" /></a>
-        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/74779_186835818154098_1393872720_n_Bk9zyoxNZTgwl.jpg"><img id="fotogallery" src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/74779_186835818154098_1393872720_n_Bk9zyoxNZTgwl.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/947250_157002787804068_1537808717_n_Ba63ml9wca.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/947250_157002787804068_1537808717_n_Ba63ml9wca.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/1451516_220281764809503_1053893980_n_e0N4OysdFK.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/1451516_220281764809503_1053893980_n_e0N4OysdFK.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/585_178628802308133_1884578181_n_u3jEEptNOk.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/585_178628802308133_1884578181_n_u3jEEptNOk.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/547780_220281738142839_1822295461_n_Q8_BNQxB3c.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/547780_220281738142839_1822295461_n_Q8_BNQxB3c.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/11923_157002817804065_813107362_n_0i8BgCZlj0XvP.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/11923_157002817804065_813107362_n_0i8BgCZlj0XvP.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/422126_157035681134112_720350114_n_DPh6akelFoF-d.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/422126_157035681134112_720350114_n_DPh6akelFoF-d.jpg"></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/600648_220281758142837_832956865_n_B8eJqj_NXXvyI.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/600648_220281758142837_832956865_n_B8eJqj_NXXvyI.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/262423_157032747801072_1200298559_n-1_JbGvZ5ygtXkhe.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/262423_157032747801072_1200298559_n-1_JbGvZ5ygtXkhe.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/316037_157035667800780_1212250794_n_28KXJhdS2pb6.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/316037_157035667800780_1212250794_n_28KXJhdS2pb6.jpg" /></a>
+        <a data-fancybox="images" href="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/74779_186835818154098_1393872720_n_Bk9zyoxNZTgwl.jpg"><img id="fotogallery"
+            src="https://ik.imagekit.io/7ol7k87qcca/Valerio/Progetto1/74779_186835818154098_1393872720_n_Bk9zyoxNZTgwl.jpg" /></a>
       </div>
     </div>
   </div>
